enhance images in pdf fix register logic
